SERVER-25590 fail cleanly if aggregate command 'pipeline' field has wrong type